# EMO-AI-Execution-OS

./: .emo_chat_history.json  .env.example  .gitignore  .pre-commit-config.yaml  .snapshot_commit_hash  ANALYSIS_REPORT.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_DESIGN.md  BETA_FEEDBACK_SYSTEM.md  BETA_LAUNCH_PLAN.md  CHANGELOG.md  CLEANUP_REPORT.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  EMO-AI-PROJECT ROADMAP.md  EMO_AI_DEVELOPMENT_PLAN.md  ENTERPRISE_RELEASE_SUMMARY.md  FINAL_PROJECT_AUDIT_REPORT.md  FINAL_RELEASE_REPORT.md  LICENSE  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_PLAN.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PROJECT_INDEX.md  PROJECT_STATUS_REPORT.md  README.md  README_DEPLOY.md  ROADMAP.md  SECURITY.md  SIGNING_MANIFEST.md  SINGLE_SOURCE_OF_TRUTH.md  VERSION  agent.py  brain.py  brain.py.save  devops_tools.py  docker-compose.yml  (+21 more)
.ai/: config.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-template.md
RELEASE_NOTES/: v1.0.0-RC18_CLOSURE.md
artifacts/: FINAL_STATE_SNAPSHOT.json
audit/: ARCHITECTURE_REALITY_REPORT.md  reality_scanner.py  thin_wrapper_classification.json  todo_fixme_inventory.txt
core/: __init__.py  adaptive_weights.py  ai_init.py  ai_logging.py  answer_formatter.py  capability_negotiation.py  context_compiler.py  contracts.py  cost_intel.py  db.py  (+30 more)
emo-desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
emo-desktop/src-tauri/capabilities/: default.json
emo-desktop/src-tauri/icons/: icon.icns
emo-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
(+1762 files in other folders)
